--- a/catalog/view/theme/default/shopcart1.html
+++ b/catalog/view/theme/default/shopcart1.html
@@ -225,25 +225,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -258,25 +241,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -291,25 +257,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -324,25 +273,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -357,25 +289,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -390,25 +305,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -423,25 +321,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 						<li>
@@ -456,25 +337,8 @@
 								</div>
 							</a>
 							<div class="close"></div>
-							<div class="select_div">
-								<button class="select_btn"><span>12inch  100g</span></button>
-								<div class="select_ul">
-									<ul>
-										<li>12inch  100g</li>
-										<li>14inch  100g</li>
-										<li>16inch  100g</li>
-										<li>18inch  100g</li>
-										<li>20inch  100g</li>
-										<li>22inch  100g</li>
-										<li>24inch  100g</li>
-										<li>26inch  100g</li>
-										<li>28inch  100g</li>
-										<li>30inch  100g</li>
-									</ul>
-								</div>
-							</div>
 							<div class="shop_a">
-								<a class="two_a" href="###"><span>Move To Shopping Cart </span></a>
+								<a class="two_a" href="javascript:0;"><span>Move To Shopping Cart </span></a>
 							</div>
 						</li>
 					
@@ -482,6 +346,51 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="shop_modal">
+			<div class="text">
+				<div class="close"></div>
+				<ul class="modal_ul clearfix">
+					<li>
+						<span>Length</span>
+						<div class="select_div">
+							<button class="select_btn"><span>12inch  100g</span></button>
+							<div class="select_ul">
+								<ul>
+									<li>12inch  100g</li>
+									<li>14inch  100g</li>
+									<li>16inch  100g</li>
+									<li>18inch  100g</li>
+									<li>20inch  100g</li>
+									<li>22inch  100g</li>
+									<li>24inch  100g</li>
+									<li>26inch  100g</li>
+									<li>28inch  100g</li>
+									<li>30inch  100g</li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<li>
+						<span>Hair Color</span>
+						<div class="select_div">
+							<button class="select_btn"><span>Natural Black </span></button>
+							<div class="select_ul">
+								<ul>
+									<li>Natural Black </li>
+									<li>Jet Black</li>
+									<li>Ash Blonde</li>
+									<li>Sandy Blonde</li>
+								</ul>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<a class="a_btn" href="###">Move To Shopping Cart</a>
+			</div>
+		</div>
+		
+		
 		
 		<!--返回顶部-->
 		<div class="xf_right">
@@ -666,21 +575,24 @@
 		//下拉选择
 		var off = 0;
 		$(".select_btn").on("click",function(event){
-			if($(this).hasClass("off")){
-				$(this).removeClass("off");
-				$(this).siblings(".select_ul").stop().slideUp();
-				off = 0;
-			}else{
-				$(".select_btn").removeClass("off");
-				$(".select_ul").stop().slideUp();
+			var lilen = $(this).siblings(".select_ul").find("ul li").length;
+			if(lilen>1){
+				if($(this).hasClass("off")){
+					$(this).removeClass("off");
+					$(this).siblings(".select_ul").stop().slideUp();
+					off = 0;
+				}else{
+					$(".select_btn").removeClass("off");
+					$(".select_ul").stop().slideUp();
 				
-				$(this).addClass("off");
-				$(this).siblings(".select_ul").stop().slideDown();
-				off = 1;
+					$(this).addClass("off");
+					$(this).siblings(".select_ul").stop().slideDown();
+					off = 1;
+				}
 			}
-			 event.stopPropagation();
+			event.stopPropagation();
 		})
-		$(".shop_content .select_ul li").click(function(){
+		$(".shop_modal .select_ul li").click(function(){
 			var val = $(this).text();
 			$(this).parents(".select_div").find(".select_btn span").text(val);
 			$(".select_btn").removeClass("off");
@@ -697,6 +609,30 @@
 			}
 			console.log(off)
 		})
+		
+		//判断下拉选项是不是大于1
+		var li_len = $(".modal_ul>li").length;
+		for(var i=0;i<li_len;i++){
+			
+			var lis_len = $(".modal_ul>li").eq(i).find(".select_ul ul li").length;
+			if(lis_len <= 1){
+				$(".modal_ul>li").eq(i).find(".select_btn").css("background","#f5f5f5").css("border","none");
+				$(".modal_ul>li").eq(i).find(".select_btn span").css("background","transparent");
+			}
+		}
+		
+		//打开尺寸选项弹窗
+		$(".shop_ul .shop_a .two_a").click(function(){
+			$(".shop_modal").fadeIn();
+			$("body").css("overflow","hidden");
+		})
+		
+		//关闭尺寸选项弹窗
+		$(".shop_modal .text .close").click(function(){
+			$(".shop_modal").fadeOut();
+			$("body").css("overflow","");
+		})
+		
 		
 		//删除当前li
 		$(".shop_content .shop_ul .close").click(function(){
