--- a/catalog/view/theme/default/view_order3.html
+++ b/catalog/view/theme/default/view_order3.html
@@ -257,40 +257,40 @@
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 							</ul>
 							
