--- a/catalog/view/theme/default/view_order1.html
+++ b/catalog/view/theme/default/view_order1.html
@@ -258,40 +258,40 @@
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 								<li class="clearfix">
 									<div class="pic_img">
 										<img src="" alt="" />										
 									</div>
 									<p class="ov_text">10"-30" Virgin Brazilian BrazilianBrazilian...</p>
-									<span>$35.05</span>
-									<span>1</span>
-									<span>12inch</span>
-									<span>$35.05</span>
+									<span class="d_price">$35.05</span>
+									<span class="num"><i class="yd_i">X</i>1</span>
+									<span class="length"><i class="yd_i">Length:</i>12inch</span>
+									<span class="z_price">$35.05</span>
 								</li>
 							</ul>
 							
@@ -303,6 +303,7 @@
 						</div>
 					</div>
 					<a class="a_btn" href="###">Continue to pay</a>
+					<a class="qx_btn" href="###">Cancel</a>
 					
 				</div>
 			</div>
@@ -315,55 +316,57 @@
 						<div class="close"></div>
 						<h1>Edit the address</h1>
 						<p>* Required fields</p>
-						<label for="">
-							<span>Frist Name *</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label class="mr_no" for="">
-							<span>Last Name *</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label class="add" for="">
-							<span>Address*</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-							<input type="text"  />
-						</label>
-						<label for="">
-							<span>Country *</span>
-							<select name="">
-								<option value="">GUANGZHOU </option>
-								<option value="">GUANGZHOU </option>
-								<option value="">GUANGZHOU </option>
-							</select>
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label class="mr_no" for="">
-							<span>Post Code *</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label for="">
-							<span>City *</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label class="mr_no" for="">
-							<span>State *</span>
-							<select name="">
-								<option value="">GUANGZHOU </option>
-								<option value="">GUANGZHOU </option>
-								<option value="">GUANGZHOU </option>
-							</select>
-							<p class="ts_ps">This field is required</p>
-						</label>
-						<label for="">
-							<span>Phone *</span>
-							<input type="text"  />
-							<p class="ts_ps">This field is required</p>
-						</label>
+						<div class="label clearfix">
+							<label for="">
+								<span>Frist Name *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="mr_no" for="">
+								<span>Last Name *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="add" for="">
+								<span>Address*</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+								<input type="text"  />
+							</label>
+							<label for="">
+								<span>Country *</span>
+								<select name="">
+									<option value="">GUANGZHOU </option>
+									<option value="">GUANGZHOU </option>
+									<option value="">GUANGZHOU </option>
+								</select>
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="mr_no" for="">
+								<span>Post Code *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label for="">
+								<span>City *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label class="mr_no" for="">
+								<span>State *</span>
+								<select name="">
+									<option value="">GUANGZHOU </option>
+									<option value="">GUANGZHOU </option>
+									<option value="">GUANGZHOU </option>
+								</select>
+								<p class="ts_ps">This field is required</p>
+							</label>
+							<label for="">
+								<span>Phone *</span>
+								<input type="text"  />
+								<p class="ts_ps">This field is required</p>
+							</label>
+						</div>
 						
 						<button class="bc_btn clearfix">SAVE ADDRESS&nbsp;&nbsp;&nbsp;></button>
 						<button class="qx_btn clearfix">CANCEL&nbsp;&nbsp;&nbsp;></button>
@@ -387,7 +390,7 @@
 								</label>
 								<img src="img/jpg/kd_1.jpg"/>
 							</dd>
-							<dd class="kd">
+							<dd class="kd yd_kd">
 								<label for="" class="dx_label">
 									<input class="check_input" type="checkbox" />
 									<i class="check_i"></i>
@@ -403,6 +406,27 @@
 						</dl>
 						<dl>
 							<dt>Shipping Cost</dt>
+							<dd>
+								<span>$0.00</span>
+							</dd>
+						</dl>
+					</li>
+					<li class="clearfix yd_li">
+						<dl>
+							<dd class="kd">
+								<label for="" class="dx_label">
+									<input class="check_input" type="checkbox" />
+									<i class="check_i"></i>
+								</label>
+								<img src="img/jpg/kd_2.jpg"/>
+							</dd>
+						</dl>
+						<dl>
+							<dd>
+								<span>2-3 Working Days</span>
+							</dd>
+						</dl>
+						<dl>
 							<dd>
 								<span>$0.00</span>
 							</dd>
@@ -595,16 +619,20 @@
 	$(function(){
 		$(".editadd").click(function(){
 			$(".edit_add_md").fadeIn();
+			$("body").css("overflow","hidden");
 		})
 		$(".edit_add_md .form_div .close").click(function(){
 			$(".edit_add_md").fadeOut();
+			$("body").css("overflow","");
 		})
 		
 		$(".editship").click(function(){
 			$(".edit_method_md").fadeIn();
+			$("body").css("overflow","hidden");
 		})
 		$(".edit_method_md .close").click(function(){
 			$(".edit_method_md").fadeOut();
+			$("body").css("overflow","");
 		})
 		
 		//单选
